--- a/web/templates/cart.html
+++ b/web/templates/cart.html
@@ -6,7 +6,11 @@
     <div class="list-group">
       {% for item in cart.items %}
         <div class="list-group-item d-flex align-items-center">
-          <img src="{{ item.product.image_url }}" class="me-3 rounded" style="width:64px;height:64px;object-fit:cover;">
+          {% set img_src = item.product.image_url %}
+          {% if img_src and not img_src.startswith('http') and not img_src.startswith('/') %}
+            {% set img_src = url_for('static', filename=img_src) %}
+          {% endif %}
+          <img src="{{ img_src or url_for('static', filename='img/default-product.svg') }}" class="me-3 rounded" style="width:64px;height:64px;object-fit:cover;">
           <div class="flex-grow-1">
             <div class="fw-bold">{{ item.product.name }}</div>
             <div class="small text-muted">{{ item.product.price }} € x {{ item.quantity }}</div>
