--- a/web/templates/catalog/products.html
+++ b/web/templates/catalog/products.html
@@ -26,8 +26,12 @@
       <div class="col-md-3 col-sm-6">
         <div class="card h-100 shadow-sm product-card">
           <a href="{{ url_for('catalog.product_detail', product_id=product.id) }}" class="text-decoration-none text-reset">
+            {% set img_src = product.image_url %}
+            {% if img_src and not img_src.startswith('http') and not img_src.startswith('/') %}
+              {% set img_src = url_for('static', filename=img_src) %}
+            {% endif %}
             <img
-              src="{{ product.image_url or url_for('static', filename='img/default-product.svg') }}"
+              src="{{ img_src or url_for('static', filename='img/default-product.svg') }}"
               class="card-img-top"
               alt="{{ product.name }}"
             >
